# libYafaRay

./: .gitattributes  .gitignore  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CMakeConfigGen.txt  CMakeLists.txt  CMakeUserConfig.template  CODING  CODING.md  INSTALL  INSTALL.md  LICENSE  LICENSES  README  README.md  SConstruct  yafray_constants.h
bindings/: CMakeLists.txt  SConscript  renderwidget.i  yafqt.i  yafrayinterface.i
cmake/generated_input/: CMakeLists.txt  yafaray_build_info.h.in  yafaray_version_build_info.h.in
src/: CMakeLists.txt  yafaray_c_api.cc
src/accelerator/: CMakeLists.txt  accelerator.cc  accelerator_kdtree.cc  accelerator_kdtree_multi_thread.cc  accelerator_kdtree_original.cc  accelerator_simple_test.cc
src/background/: CMakeLists.txt  background.cc  background_constant.cc  background_darksky.cc  background_gradient.cc  background_sunsky.cc  background_texture.cc
src/backgrounds/: CMakeLists.txt  SConscript  darksky.cc  gradientback.cc  sunsky.cc  sunspectrum.cc  textureback.cc
src/bindings/: CMakeLists.txt  yafaray4_interface.i  yafaray4_qt_interface.i  yafaray_e2_interface.i  yafaray_e3_interface.i  yafaray_v3_interface.i  yafqt.i  yafrayinterface.i  yafrayinterface2.i
src/camera/: CMakeLists.txt  camera.cc  camera_angular.cc  camera_architect.cc  camera_equirectangular.cc  camera_orthographic.cc  camera_perspective.cc
src/cameras/: CMakeLists.txt  SConscript  angularCamera.cc  architectCamera.cc  builtincameras.cc  equirectangularCamera.cc  orthographicCamera.cc  perspectiveCamera.cc
src/color/: CMakeLists.txt  color.cc  color_console.cc  color_conversion.cc  color_layers.cc  color_ramp.cc  spectrum.cc
src/common/: CMakeLists.txt  badge.cc  bound.cc  color.cc  color_console.cc  color_ramp.cc  console.cc  container.cc  environment.cc  file.cc  hashgrid.cc  imagefilm.cc  imagehandler.cc  imagesplitter.cc  import_xml.cc  items.cc  kdtree.cc  kdtree_generic.cc  kdtree_triangle.cc  layer.cc  layer_definitions.cc  layers.cc  logger.cc  logging.cc  material.cc  matrix4.cc  memory.cc  output_image.cc  output_memory.cc  param.cc  photon.cc  renderpasses.cc  scene.cc  session.cc  spectrum.cc  surface.cc  sysinfo.cc  timer.cc  triangle.cc  tribox3_d.cc  (+3 more)
src/export/: export_xml.cc
src/format/: CMakeLists.txt  format.cc  format_exr.cc  format_hdr.cc  format_jpg.cc  format_png.cc  format_tga.cc  format_tif.cc
src/geometry/: CMakeLists.txt  axis.cc  bound.cc  direction_color.cc  instance.cc  matrix4.cc  object.cc  object_geom.cc  object_geom_mesh.cc  object_instance.cc  object_triangle.cc  object_triangle_instance.cc  poly_double.cc  primitive.cc  primitive_basic.cc  primitive_instance.cc  primitive_sphere.cc  primitive_triangle.cc  primitive_triangle_bspline_time.cc  surface.cc  triangle.cc  triangle_instance.cc  tribox3_d.cc  triclip.cc  vector.cc
src/gui/: CMakeLists.txt  ConsoleRedir.h  SConscript  animworking.cc  animworking.h  events.cc  events.h  guifont.h  mywindow.cc  mywindow.h  qtoutput.cc  qtoutput.h  qtprogress.cc  qtprogress.h  renderwidget.cc  renderwidget.h  toolbar_alpha_icon.h  toolbar_cancel_icon.h  toolbar_colorbuffer_icon.h  toolbar_drawparams_icon.h  toolbar_render_icon.h  toolbar_save_as_icon.h  toolbar_show_alpha_icon.h  toolbar_z_buffer_icon.h  windowbase.ui  worker.cc  worker.h  yafarayicon.h  yafqtapi.h
src/image/: CMakeLists.txt  badge.cc  image.cc  image_layers.cc  image_manipulation.cc  image_manipulation_freetype.cc  image_manipulation_opencv.cc  image_output.cc
src/image_handlers/: CMakeLists.txt  SConscript  exrHandler.cc  hdrHandler.cc  hdrUtils.h  jpgHandler.cc  pngHandler.cc  pngUtils.h  tgaHandler.cc  tgaUtils.h  tifHandler.cc
src/imagehandler/: imagehandler.cc  imagehandler_exr.cc  imagehandler_hdr.cc  imagehandler_jpg.cc  imagehandler_png.cc  imagehandler_tga.cc  imagehandler_tif.cc
src/import/: import_xml.cc
src/integrator/: CMakeLists.txt  integrator.cc  integrator_bidirectional.cc  integrator_debug.cc  integrator_direct_light.cc  integrator_emission.cc  integrator_empty_volume.cc  integrator_montecarlo.cc  integrator_path_tracer.cc  integrator_photon_mapping.cc  integrator_single_scatter.cc  integrator_sky.cc  integrator_sppm.cc  integrator_tiled.cc
src/integrators/: CMakeLists.txt  DebugIntegrator.cc  EmissionIntegrator.cc  EmptyVolumeIntegrator.cc  SConscript  SingleScatterIntegrator.cc  SkyIntegrator.cc  bidirpath.cc  common.cc  directlight.cc  pathtracer.cc  photonintegr.cc  photonintegr_cache.cc  sppm.cc
src/interface/: CMakeLists.txt  SConscript  interface.cc  interface_c.cc  interface_xml_export.cc  xmlinterface.cc  yafaray_c_api.cc  yafrayinterface.cc
src/light/: CMakeLists.txt  light.cc  light_area.cc  light_background.cc  light_background_portal.cc  light_directional.cc  light_ies.cc  light_meshlight.cc  light_object_light.cc  light_point.cc  light_sphere.cc  light_spot.cc  light_sun.cc
src/lights/: CMakeLists.txt  SConscript  arealight.cc  bglight.cc  bgportallight.cc  directional.cc  iesLight.cc  meshlight.cc  pointlight.cc  spherelight.cc  spotlight.cc  sunlight.cc
src/loader_xml/: CMakeLists.txt  loader_xml.cc
src/material/: CMakeLists.txt  material.cc  material_blend.cc  material_coated_glossy.cc  material_glass.cc  material_glossy.cc  material_light.cc  material_mask.cc  material_mirror.cc  material_node.cc  material_null.cc  material_rough_glass.cc  material_shiny_diffuse.cc  material_simple.cc
src/materials/: CMakeLists.txt  SConscript  beer.cc  blend.cc  blendmat.cc  coatedglossy.cc  glass.cc  glossy.cc  glossy2.cc  glossy_mat.cc  mask.cc  maskmat.cc  roughglass.cc  shinydiff.cc  shinydiffuse.cc  simple.cc  simplemats.cc
src/math/: CMakeLists.txt  random.cc
src/noise/: CMakeLists.txt  noise_generator.cc
src/object_geom/: object_geom.cc  primitive_basic.cc  triangle.cc
src/output/: CMakeLists.txt  output.cc  output_callback.cc  output_debug.cc  output_image.cc  output_memory.cc
src/param/: CMakeLists.txt  class_meta.cc  param.cc
src/photon/: CMakeLists.txt  hashgrid.cc  photon.cc
src/public_api/: CMakeLists.txt  yafaray_c_api.cc  (+10 more)
(+946 files in other folders)
